<?xml version="1.0"?>
<package>
  <name>map_creator</name>
  <version>0.0.0</version>
  <description>The map_creator package</description>

   <maintainer email="makhabhi@isu.edu">Abhijit Makhal</maintainer>

  <license>Apache 2.0</license>


  <author email="makhabhi@isu.edu">Abhijit Makhal</author>


  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>hdf5</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>srdfdom</build_depend>  
  <build_depend>kdl_parser</build_depend>  
  <build_depend>trac_ik_lib</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>hdf5</run_depend>
  <run_depend>pcl_ros</run_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
